--- a/1b-advanced/data-api.yaml
+++ b/1b-advanced/data-api.yaml
@@ -26,7 +26,7 @@ spec:
       - name: data-api-pods
 
         # !CHANGE THIS! To your real image reference for the data-api  
-        image: smilr/data-api:stable
+        image: smilr/data-api:latest
         imagePullPolicy: Always
 
         ports:
