--- a/1b-advanced/ingress-http.yaml
+++ b/1b-advanced/ingress-http.yaml
@@ -11,12 +11,11 @@ metadata:
   labels:
     scenario: 1b
   annotations:
-    kubernetes.io/ingress.class: addon-http-application-routing
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
-    # !!! Change host as required to match your DNS configuration
-  - host: smilr.{{CHANGEME}.{{CHANGEME}}.aksapp.io
+  - host: smilr.kainiindustries.net
     http:
       paths:
       - path: /api
